tests/src/frontend/typechecking/invalid/value_class_1.sk
base class B
value class Foo extends B
